# catch2_calculator

./: CMakeLists.txt  README.md
include/: calculator.hpp
src/: CMakeLists.txt  calculator.cpp  main.cpp
test/: CMakeLists.txt  test_calculator.cpp
